--- a/notebooks/deploy_heatmap_AWS_local.ipynb
+++ b/notebooks/deploy_heatmap_AWS_local.ipynb
@@ -2655,7 +2655,7 @@
     "    dcc.Graph(figure=fig)\n",
     "])\n",
     "\n",
-    "app.run_server(debug=True, use_reloader=False)"
+    "app.run_server(debug=False, use_reloader=False)"
    ]
   },
   {
