--- a/notebooks/regressionAnalysisIrvingtonVillage.ipynb
+++ b/notebooks/regressionAnalysisIrvingtonVillage.ipynb
@@ -6,8 +6,9 @@
       "name": "regressionAnalysisIrvingtonVillage.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "mount_file_id": "1E1YvZiMeBDM507c8-MGx0RKFGsugTS9m",
-      "authorship_tag": "ABX9TyNLwUmiirl+7ka7YhRdAwec",
+      "authorship_tag": "ABX9TyPWIeNvVS000tr93h6W8zVb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +37,7 @@
       "source": [
         "cp drive/My\\ Drive/data/pa/dataIrvingtonVillage/data_count_mv.csv ./data.csv"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +59,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +274,7 @@
         "\n",
         "plot = df3.plot.pie(y='Pavement Rate Overall', figsize=(5, 5))"
       ],
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -303,7 +304,7 @@
       "source": [
         "df3 = df['maintenance level'].value_counts()"
       ],
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -329,7 +330,7 @@
       "source": [
         ""
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -353,7 +354,7 @@
         "\n",
         "df2.head()"
       ],
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +447,7 @@
         "# Convert to numpy array\n",
         "df2 = np.array(df2)"
       ],
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +463,7 @@
         "# Split the data into training and testing sets\n",
         "train_features, test_features, train_labels, test_labels = train_test_split(df2, labels, test_size = 0.5, random_state = 42)"
       ],
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +483,7 @@
         "print('Testing Features Shape:', test_features.shape)\n",
         "print('Testing Labels Shape:', test_labels.shape)"
       ],
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +539,7 @@
         "accuracy = 100 - np.mean(mape)\n",
         "print('Accuracy:', round(accuracy, 2), '%.')"
       ],
-      "execution_count": 225,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +576,7 @@
         "accuracy = 100 - np.mean(mape)\n",
         "print('Accuracy:', round(accuracy, 2), '%.')"
       ],
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +614,7 @@
         "accuracy = 100 - np.mean(mape)\n",
         "print('Accuracy:', round(accuracy, 2), '%.')"
       ],
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -650,7 +651,7 @@
         "#predictions = clf.predict(test_features)\n",
         "predictions = clf.predict(df2)"
       ],
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +668,7 @@
       "source": [
         "predictions"
       ],
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +721,7 @@
         "\n",
         "\t"
       ],
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +750,7 @@
         "clf = svm.SVC(random_state=0)\n",
         "cross_val_score(clf, train_features, train_labels, cv=5, scoring='recall_macro')"
       ],
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -797,7 +798,7 @@
         "\n",
         "df_scores"
       ],
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -871,7 +872,7 @@
       "source": [
         "df_scores.to_csv('model rates')"
       ],
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -899,7 +900,7 @@
         "accuracy = 100 - np.mean(mape)\n",
         "print('Accuracy:', round(accuracy, 2), '%.')"
       ],
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -925,7 +926,7 @@
       "source": [
         "predictions"
       ],
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +994,7 @@
         "# Print out the feature and importances \n",
         "[print('Variable: {:20} Importance: {}'.format(*pair)) for pair in feature_importances];"
       ],
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1016,7 @@
       "source": [
         ""
       ],
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1046,7 +1047,7 @@
         "#plt.xlabel('xlabel', fontsize=18)\n",
         "#plt.ylabel('ylabel', fontsize=16)\n"
       ],
-      "execution_count": 237,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1088,7 +1089,7 @@
         "# Write graph to a png file\n",
         "graph.write_png('tree.png')"
       ],
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1109,7 +1110,7 @@
         "(graph, ) = pydot.graph_from_dot_file('small_tree.dot')\n",
         "graph.write_png('/content/small_tree.png');"
       ],
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1148,7 +1149,7 @@
         "# Print out the mean absolute error (mae)\n",
         "#print('Mean Absolute Error:', round(np.mean(errors), 2), 'rate.')"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1166,7 +1167,7 @@
         "import sklearn\n",
         "sklearn.metrics.confusion_matrix(y_test, predictions)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1201,7 +1202,7 @@
         "acc_clf = accuracy_score(y_test, predictions)\n",
         "print(f'accuracy of naive bayes ba is {acc_clf} ')"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1227,7 +1228,7 @@
         "from sklearn.metrics import classification_report\n",
         "print(classification_report(y_test, predictions))"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1268,6 +1269,229 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BYvsycmMU-iK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4qEdZTXvU-kV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "0f73cc44-07c5-462b-851a-16b994576a41"
+      },
+      "source": [
+        "df_acc = pd.DataFrame()\n",
+        "df_acc['Random Forest Regression'] = 75.29, 77.93\n",
+        "df_acc['Linear Regression'] = 80.52, 80.63 \n",
+        "df_acc['Logsitc Regression'] = 81.87, 82.35\n",
+        "df_acc['SGD Regression'] = 80.63, 80.41\n",
+        "\n",
+        "df_acc.rename(index = {0: 'municipality'}, inplace = True)\n",
+        "df_acc.rename(index = {1: 'machine vision'}, inplace = True)\n",
+        "\n",
+        "df_acc"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Random Forest Regression</th>\n",
+              "      <th>Linear Regression</th>\n",
+              "      <th>Logsitc Regression</th>\n",
+              "      <th>SGD Regression</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>municipality</th>\n",
+              "      <td>75.29</td>\n",
+              "      <td>80.52</td>\n",
+              "      <td>81.87</td>\n",
+              "      <td>80.63</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>machine vision</th>\n",
+              "      <td>77.93</td>\n",
+              "      <td>80.63</td>\n",
+              "      <td>82.35</td>\n",
+              "      <td>80.41</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                Random Forest Regression  ...  SGD Regression\n",
+              "municipality                       75.29  ...           80.63\n",
+              "machine vision                     77.93  ...           80.41\n",
+              "\n",
+              "[2 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5aDXI8BEVOc9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "outputId": "cf1563e1-27e1-48f3-d75d-c3441ed75283"
+      },
+      "source": [
+        "df_mape = pd.DataFrame()\n",
+        "df_mape['Random Forest Regression'] = 1.45, 1.35\n",
+        "df_mape['Linear Regression'] = 1.16, 1.15\n",
+        "df_mape['Logsitc Regression'] = 0.98, 0.92\n",
+        "df_mape['SGD Regression'] = 1.19, 1.18\n",
+        "\n",
+        "df_mape.rename(index = {0: 'municipality'}, inplace = True)\n",
+        "df_mape.rename(index = {1: 'machine vision'}, inplace = True)\n",
+        "\n",
+        "df_mape.head()"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Random Forest Regression</th>\n",
+              "      <th>Linear Regression</th>\n",
+              "      <th>Logsitc Regression</th>\n",
+              "      <th>SGD Regression</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>municipality</th>\n",
+              "      <td>1.45</td>\n",
+              "      <td>1.16</td>\n",
+              "      <td>0.98</td>\n",
+              "      <td>1.19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>machine vision</th>\n",
+              "      <td>1.35</td>\n",
+              "      <td>1.15</td>\n",
+              "      <td>0.92</td>\n",
+              "      <td>1.18</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                Random Forest Regression  ...  SGD Regression\n",
+              "municipality                        1.45  ...            1.19\n",
+              "machine vision                      1.35  ...            1.18\n",
+              "\n",
+              "[2 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tfg9OY22bI0w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_mape.to_csv('mape.csv', index=True)"
+      ],
+      "execution_count": 114,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4njh2sFpbuun",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_acc.to_csv('acc.csv', index = True)"
+      ],
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SBtK6dbXWWFR",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
